--- a/repositoryUserInterface/.classpath
+++ b/repositoryUserInterface/.classpath
@@ -5,6 +5,11 @@
 	
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/usr/local/play-1.2.4/framework/play-1.2.4.jar" sourcepath="/usr/local/play-1.2.4/framework/src" />
+	<classpathentry kind="lib" path="/home/nipun/git/repositoryUI/repositoryUserInterface/lib/sphinx4.jar"/>
+	<classpathentry kind="lib" path="/home/nipun/git/repositoryUI/repositoryUserInterface/lib/tags.jar"/>
+	<classpathentry kind="lib" path="/home/nipun/git/repositoryUI/repositoryUserInterface/lib/jsapi-1.0-base.jar"/>
+	<classpathentry kind="lib" path="/home/nipun/git/repositoryUI/repositoryUserInterface/lib/js.jar"/>
+	<classpathentry kind="lib" path="/home/nipun/git/repositoryUI/repositoryUserInterface/lib/WSJ_8gau_13dCep_16k_40mel_130Hz_6800Hz.jar"/>
 	<classpathentry kind="lib" path="/usr/local/play-1.2.4/framework/lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/usr/local/play-1.2.4/framework/lib/xstream-1.3.jar"/>
 	<classpathentry kind="lib" path="/usr/local/play-1.2.4/framework/lib/oval-1.50.jar"/>
