--- a/repositoryUserInterface/.project
+++ b/repositoryUserInterface/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>repositoryUserInterface</name>
+	<name>ui</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -15,4 +15,5 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.playframework.playclipse.playNature</nature>
 	</natures>
+	
 </projectDescription>
