--- a/repositoryUserInterface/conf/application.conf
+++ b/repositoryUserInterface/conf/application.conf
@@ -7,7 +7,7 @@ application.name=ui
 # Set to dev to enable instant reloading and other development help.
 # Otherwise set to prod.
 application.mode=dev
-%prod.application.mode=prod
+#%prod.application.mode=prod
 
 # Secret key
 # ~~~~~
